@@ -38,6 +38,7 @@ void 	gabeep(void);
 #define Border      	0x10100000L
 void	app_cleanup(void);
 int 	ismdi();
+int	isiconic(window w);
 rect 	screen_coords(control c);
 
 /* gmenus.c */
