@@ -679,6 +679,10 @@ int ismdi() {
  return (hwndClient!=NULL);
 }
 
+int isiconic(window w) {
+    return IsIconic(w->handle);
+}
+
 PROTECTED
 rect GetCurrentWinPos(object obj)
 {
